--- a/appendix/references.bib
+++ b/appendix/references.bib
@@ -1,5 +1,11 @@
 %%% References
 
+@misc{strezhnev2013conjoint,
+  title={{Conjoint Survey Design Tool: Software Manual}},
+  author={Strezhnev, Anton and Hainmueller, Jens and Hopkins, Daniel J and Yamamoto, Teppei},
+  year={2013}
+}
+
 @article{jordan2015emergence,
   title={{Emergence of Polycentric Climate Governance and Its Future Prospects}},
   author={Jordan, Andrew J and Huitema, Dave and Hild{\'e}n, Mikael and Van Asselt, Harro and Rayner, Tim J and Schoenefeld, Jonas J and Tosun, Jale and Forster, Johanna and Boasson, Elin L},
@@ -305,7 +311,7 @@
 }
 
 @article{bansak2016economic,
-  title={How economic, humanitarian, and religious concerns shape European attitudes toward asylum seekers},
+  title={{How Economic, Humanitarian, and Religious Concerns Shape European Attitudes toward Asylum Seekers}},
   author={Bansak, Kirk and Hainmueller, Jens and Hangartner, Dominik},
   journal={Science},
   volume={354},
